--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "partysocket": "1.0.2"
+  },
+  "devDependencies": {
+    "partykit": "0.0.110"
   }
 }
